@@ -1,8 +1,10 @@
 package xin.vanilla.sakura.network.packet;
 
+import io.netty.buffer.ByteBuf;
 import lombok.Getter;
 import lombok.NonNull;
 import net.minecraft.network.FriendlyByteBuf;
+import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.network.protocol.common.custom.CustomPacketPayload;
 import net.minecraft.resources.ResourceLocation;
 import net.neoforged.neoforge.network.handling.IPayloadContext;
@@ -20,7 +22,16 @@ import java.util.stream.Collectors;
 
 @Getter
 public class PlayerDataSyncPacket extends SplitPacket implements CustomPacketPayload {
-    public final static ResourceLocation ID = new ResourceLocation(SakuraSignIn.MODID, "player_data_sync");
+    public final static Type<PlayerDataSyncPacket> TYPE = new Type<>(new ResourceLocation(SakuraSignIn.MODID, "player_data_sync"));
+    public final static StreamCodec<ByteBuf, PlayerDataSyncPacket> STREAM_CODEC = new StreamCodec<>() {
+        public @NotNull PlayerDataSyncPacket decode(@NotNull ByteBuf byteBuf) {
+            return new PlayerDataSyncPacket((new FriendlyByteBuf(byteBuf)));
+        }
+
+        public void encode(@NotNull ByteBuf byteBuf, @NotNull PlayerDataSyncPacket packet) {
+            packet.toBytes(new FriendlyByteBuf(byteBuf));
+        }
+    };
 
     private final UUID playerUUID;
     private final int totalSignInDays;
@@ -58,12 +69,12 @@ public class PlayerDataSyncPacket extends SplitPacket implements CustomPacketPay
 
     public PlayerDataSyncPacket(List<PlayerDataSyncPacket> packets) {
         super();
-        this.playerUUID = packets.get(0).playerUUID;
-        this.totalSignInDays = packets.get(0).totalSignInDays;
-        this.continuousSignInDays = packets.get(0).continuousSignInDays;
-        this.lastSignInTime = packets.get(0).lastSignInTime;
-        this.signInCard = packets.get(0).signInCard;
-        this.autoRewarded = packets.get(0).autoRewarded;
+        this.playerUUID = packets.getFirst().playerUUID;
+        this.totalSignInDays = packets.getFirst().totalSignInDays;
+        this.continuousSignInDays = packets.getFirst().continuousSignInDays;
+        this.lastSignInTime = packets.getFirst().lastSignInTime;
+        this.signInCard = packets.getFirst().signInCard;
+        this.autoRewarded = packets.getFirst().autoRewarded;
         this.signInRecords = packets.stream()
                 .map(PlayerDataSyncPacket::getSignInRecords)
                 .flatMap(Collection::stream)
@@ -82,13 +93,8 @@ public class PlayerDataSyncPacket extends SplitPacket implements CustomPacketPay
         this.signInRecords = new ArrayList<>();
     }
 
-    @Override
-    public @NotNull ResourceLocation id() {
-        return ID;
-    }
-
-    public void write(@NonNull FriendlyByteBuf buffer) {
-        super.write(buffer);
+    public void toBytes(@NonNull FriendlyByteBuf buffer) {
+        super.toBytes(buffer);
         buffer.writeUUID(playerUUID);
         buffer.writeInt(this.totalSignInDays);
         buffer.writeInt(this.continuousSignInDays);
@@ -101,9 +107,14 @@ public class PlayerDataSyncPacket extends SplitPacket implements CustomPacketPay
         }
     }
 
+    @Override
+    public @NotNull Type<? extends CustomPacketPayload> type() {
+        return TYPE;
+    }
+
     public static void handle(PlayerDataSyncPacket packet, IPayloadContext ctx) {
         if (ctx.flow().isClientbound()) {
-            ctx.workHandler().execute(() -> {
+            ctx.enqueueWork(() -> {
                 // 在客户端更新 PlayerSignInDataCapability
                 // 获取玩家并更新 Capability 数据
                 List<PlayerDataSyncPacket> packets = SplitPacket.handle(packet);
